tests/vrs/flags/flags_02_global_eq_expected.txt
error: expected `{`, found `=`
     --> tests/vrs/flags/flags_02_global_eq.vrs:1:7
      |
    1 |  flags = { foo, bar }
      |        ^ help: add `{` here.
